Included and styled project content.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,61 @@
             <h2 class="mb-5">Front-end developer based in New Zealand</h2>
             <a href="#" class="btn btn-branding contact-button">Contact me</a>
         </div>
+            <p class="text-center m-5">Check out my projects below! 👩‍💻</p>
+        <div class="projects">
+            
+            <div class="row">
+                <div class="col-6">
+                    <img class="img-fluid" src="images/dictionary.png.PNG" alt="Dictionary">
+                </div>
+                <div class="col-6">
+                    <h2>Dictionary Project</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio debitis qui maiores?
+                    <br>
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
+                    molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
+                    debitis qui maiores?
+                    </p>
+                    <button class="btn btn-branding-outline">Learn More</button>
+                </div>
+                <div class="col-6">
+                    <h2>Dictionary Project</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
+                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
+                        debitis qui maiores?
+                        <br>
+                        <br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
+                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
+                        debitis qui maiores?
+                    </p>
+                    <button class="btn btn-branding-outline">Learn More</button>
+                </div>
+                <div class="col-6">
+                    <img class="img-fluid" src="images/blueberry.png" alt="Blueberry Pancakes">
+                </div>
+                <div class="col-6">
+                    <img class="img-fluid" src="images/weather.png" alt="Weather App">
+                </div>
+                <div class="col-6">
+                    <h2>Dictionary Project</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
+                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
+                        debitis qui maiores?
+                        <br>
+                        <br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
+                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
+                        debitis qui maiores?
+                    </p>
+                    <button class="btn btn-branding-outline">Learn More</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
