--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <p class="text-center m-5">Check out my projects below! 👩‍💻</p>
         <div class="projects">
             
-            <div class="row">
-                <div class="col-6">
+            <div class="row-mb-5">
+                <div class="col-6 d-none d-lg-block">
                     <img class="img-fluid" src="images/dictionary.png.PNG" alt="Dictionary">
                 </div>
                 <div class="col-6">
@@ -45,6 +45,8 @@
                     </p>
                     <button class="btn btn-branding-outline">Learn More</button>
                 </div>
+            </div>
+            <div class="row-mb-5">
                 <div class="col-6">
                     <h2>Dictionary Project</h2>
                     <p>
@@ -59,10 +61,13 @@
                     </p>
                     <button class="btn btn-branding-outline">Learn More</button>
                 </div>
-                <div class="col-6">
+          
+                <div class="col-6 d-none d-lg-block">
                     <img class="img-fluid" src="images/blueberry.png" alt="Blueberry Pancakes">
-                </div>
-                <div class="col-6">
+                </div>  
+            </div>
+            <div class="row-mb-5">
+                <div class="col-6 d-none d-lg-block">
                     <img class="img-fluid" src="images/weather.png" alt="Weather App">
                 </div>
                 <div class="col-6">
@@ -79,6 +84,7 @@
                     </p>
                     <button class="btn btn-branding-outline">Learn More</button>
                 </div>
+            </div>
             </div>
         </div>
     </div>
