Revert "Attempt to make site responsive."
This reverts commit a98aac0149587fbd2ce25674f2d800dd91731723.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <p class="text-center m-5">Check out my projects below! 👩‍💻</p>
         <div class="projects">
             
-            <div class="row-mb-5">
-                <div class="col-6 d-none d-lg-block">
+            <div class="row">
+                <div class="col-6">
                     <img class="img-fluid" src="images/dictionary.png.PNG" alt="Dictionary">
                 </div>
                 <div class="col-6">
@@ -45,8 +45,6 @@
                     </p>
                     <button class="btn btn-branding-outline">Learn More</button>
                 </div>
-            </div>
-            <div class="row-mb-5">
                 <div class="col-6">
                     <h2>Dictionary Project</h2>
                     <p>
@@ -61,13 +59,10 @@
                     </p>
                     <button class="btn btn-branding-outline">Learn More</button>
                 </div>
-          
-                <div class="col-6 d-none d-lg-block">
+                <div class="col-6">
                     <img class="img-fluid" src="images/blueberry.png" alt="Blueberry Pancakes">
-                </div>  
-            </div>
-            <div class="row-mb-5">
-                <div class="col-6 d-none d-lg-block">
+                </div>
+                <div class="col-6">
                     <img class="img-fluid" src="images/weather.png" alt="Weather App">
                 </div>
                 <div class="col-6">
@@ -84,7 +79,6 @@
                     </p>
                     <button class="btn btn-branding-outline">Learn More</button>
                 </div>
-            </div>
             </div>
         </div>
     </div>
