Undo changes to layout.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
                         debitis qui maiores?
                     </p>
-                    <button class="btn btn-branding-outline">Learn More</button>
+                    <button class="btn btn-branding-outlinen mt-5">Learn More</button>
                 </div>
                 <div class="col-6">
                     <img class="img-fluid" src="images/blueberry.png" alt="Blueberry Pancakes">
