Debugging bootstrap column use.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
@@ -18,69 +19,77 @@
         crossorigin="anonymous"></script>
     <title>Melanie Brandes - Frontend Developer</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="hero">
-            <p>👋 Hello, I'm</p>
-            <h1>Melanie Brandes</h1>
-            <h2 class="mb-5">Front-end developer based in New Zealand</h2>
-            <a href="#" class="btn btn-branding contact-button">Contact me</a>
-        </div>
-            <p class="text-center m-5">Check out my projects below! 👩‍💻</p>
-        <div class="projects">
-            
+
+    <div class="hero">
+        <p>👋 Hello, I'm</p>
+        <h1>Melanie Brandes</h1>
+        <h2 class="mb-5">Front-end developer based in New Zealand</h2>
+        <a href="#" class="btn btn-branding contact-button">Contact me</a>
+    </div>
+    <p class="text-center m-5">Check out my projects below! 👩‍💻</p>
+    <div class="projects">
+        <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col d-none d-lg-block">
                     <img class="img-fluid" src="images/dictionary.png.PNG" alt="Dictionary">
                 </div>
-                <div class="col-6">
-                    <h2>Dictionary Project</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio debitis qui maiores?
-                    <br>
-                    <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
-                    molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
-                    debitis qui maiores?
-                    </p>
-                    <button class="btn btn-branding-outline">Learn More</button>
+                <div class="col">
+                    <div class="project-description">
+                        <h2 class="mb-5">Dictionary Project</h2>
+                        <p class="mb-5 text-muted">
+                            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                            there live the blind texts.
+                            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                            ocean. A small river named
+                            Duden flows by
+                        </p>
+                        <button class="btn btn-branding-outline">Learn More</button>
+                    </div>
                 </div>
-                <div class="col-6">
-                    <h2>Dictionary Project</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
-                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
-                        debitis qui maiores?
-                        <br>
-                        <br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
-                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
-                        debitis qui maiores?
-                    </p>
-                    <button class="btn btn-branding-outlinen mt-5">Learn More</button>
+                <div class="row">
+                    <div class="col">
+                        <div class="project-description">
+                            <h2 class="mb-5">Weather App</h2>
+                            <p class="mb-5 text-muted">
+                                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.
+                                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                                language
+                                ocean. A small river named
+                                Duden flows by
+                            </p>
+                            <button class="btn btn-branding-outline mt-5">Learn More</button>
+                        </div>
+                    </div>
+                    <div class="col d-none d-lg-block">
+                        <img class="img-fluid" src="images/weather.png" alt="Weather App">
+                    </div>
                 </div>
-                <div class="col-6">
-                    <img class="img-fluid" src="images/blueberry.png" alt="Blueberry Pancakes">
-                </div>
-                <div class="col-6">
-                    <img class="img-fluid" src="images/weather.png" alt="Weather App">
-                </div>
-                <div class="col-6">
-                    <h2>Dictionary Project</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
-                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
-                        debitis qui maiores?
-                        <br>
-                        <br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repellat harum nulla? Pariatur saepe labore
-                        molestias, repellat commodi quo minus perferendis quasi reprehenderit consectetur quidem blanditiis optio
-                        debitis qui maiores?
-                    </p>
-                    <button class="btn btn-branding-outline">Learn More</button>
+
+                <div class="row">
+                    <div class="col d-none d-lg-block">
+                        <img class="img-fluid" src="images/blueberry.png" alt="Vegan Blueberry Pancakes">
+                    </div>
+                    <div class="col">
+                        <div class="project-description">
+                            <h2 class="mb-5">Blueberry Pancakes</h2>
+                            <p class="mb-5 text-muted">
+                                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.
+                                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                                language
+                                ocean. A small river named
+                                Duden flows by
+                            </p>
+                            <button class="btn btn-branding-outline">Learn More</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
