Added content and last finishing touches on styling.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Melanie Brandes is a front-end developer based in New Zealand. She builds responsive websites that work. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <title>Melanie Brandes - Frontend Developer</title>
+    <title>Melanie Brandes - Front-end Developer</title>
 </head>
 
 <body>
@@ -28,24 +30,23 @@
         <h2 class="mb-5">Front-end developer based in New Zealand</h2>
         <a href="#" class="btn btn-branding contact-button">Contact me</a>
     </div>
-    <p class="text-center m-5">Check out my projects below! 👩‍💻</p>
+    <p class="text-center m-5">Check out my projects below 👩‍💻</p>
     <div class="projects">
         <div class="container">
             <div class="row">
-                <div class="col d-none d-lg-block">
+                <div class="col d-none d-lg-block mb-5">
                     <img class="img-fluid" src="images/dictionary.png.PNG" alt="Dictionary">
                 </div>
                 <div class="col">
                     <div class="project-description">
-                        <h2 class="mb-5">Dictionary Project</h2>
+                        <h2 class="mb-5">Dictionary App</h2>
                         <p class="mb-5 text-muted">
-                            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.
-                            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
-                            ocean. A small river named
-                            Duden flows by
+                            The Dictionary Lite App has been my lates project. This app combines my coding knowledge
+                            from three coding workshops using the React Framework, as well as JavaScript to make it
+                            functional. The free dictionary API and the Pexels Image API together create a great user
+                            experience when looking up definitions of words.
                         </p>
-                        <button class="btn btn-branding-outline">Learn More</button>
+                        <button class="btn btn-branding-outline">Launch App</button>
                     </div>
                 </div>
                 <div class="row">
@@ -53,14 +54,13 @@
                         <div class="project-description">
                             <h2 class="mb-5">Weather App</h2>
                             <p class="mb-5 text-muted">
-                                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                                there live the blind texts.
-                                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                                language
-                                ocean. A small river named
-                                Duden flows by
+                                This Weather App uses the OpenWeatherMap API and allows the user to access
+                                weather data from anywhere in the world through a search bar. This data includes the
+                                current weather as well as a seven day forecast based on real-life data. I used the
+                                fronte-end framework Bootsrap to create a professional user interface and user
+                                experience.
                             </p>
-                            <button class="btn btn-branding-outline mt-5">Learn More</button>
+                            <button class="btn btn-branding-outline">Launch App</button>
                         </div>
                     </div>
                     <div class="col d-none d-lg-block">
@@ -76,12 +76,10 @@
                         <div class="project-description">
                             <h2 class="mb-5">Blueberry Pancakes</h2>
                             <p class="mb-5 text-muted">
-                                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                                there live the blind texts.
-                                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                                language
-                                ocean. A small river named
-                                Duden flows by
+                                The Blueberry Pancake Project was one of my earlier attempts to create a website that is
+                                purely based on HTML, CSS and very simple JavaScript. While it is basic, I like to
+                                incorporate this project as a reminder for myself of my own progess as a developer. I am
+                                also quite fond of the design and colour choice in this project.
                             </p>
                             <button class="btn btn-branding-outline">Learn More</button>
                         </div>
