Added links to two projects.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="mb-5">Front-end developer based in New Zealand</h2>
         <a href="#" class="btn btn-branding contact-button">Contact me</a>
     </div>
-    <p class="text-center m-5">Check out my projects below 👩‍💻</p>
+    <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
     <div class="projects">
         <div class="container">
             <div class="row">
@@ -46,7 +46,9 @@
                             functional. The free dictionary API and the Pexels Image API together create a great user
                             experience when looking up definitions of words.
                         </p>
-                        <button class="btn btn-branding-outline">Launch App</button>
+                        <a href="https://elastic-hoover-d0f470.netlify.app/" target="_blanc"
+                            class="btn btn-branding-outline">Launch
+                            App</a>
                     </div>
                 </div>
                 <div class="row">
@@ -60,7 +62,9 @@
                                 fronte-end framework Bootsrap to create a professional user interface and user
                                 experience.
                             </p>
-                            <button class="btn btn-branding-outline">Launch App</button>
+                            <a href="https://objective-colden-aae6f9.netlify.app/" target="_blanc"
+                                class="btn btn-branding-outline">Launch
+                                App</a>
                         </div>
                     </div>
                     <div class="col d-none d-lg-block">
@@ -81,7 +85,7 @@
                                 incorporate this project as a reminder for myself of my own progess as a developer. I am
                                 also quite fond of the design and colour choice in this project.
                             </p>
-                            <button class="btn btn-branding-outline">Learn More</button>
+                            <a href="#" target="_blanc" class="btn btn-branding-outline">Learn More</a>
                         </div>
                     </div>
                 </div>
