Added 'About' page, including content, styling and responsiveness.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>👋 Hello, I'm</p>
         <h1>Melanie Brandes</h1>
         <h2 class="mb-5">Front-end developer based in New Zealand</h2>
-        <a href="#" class="btn btn-branding contact-button">Contact me</a>
+        <a href="#" class="btn btn-branding main-button">Contact me</a>
     </div>
     <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
     <div class="projects">
