Added about me page button on homepage.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <p>👋 Hello, I'm</p>
         <h1>Melanie Brandes</h1>
         <h2 class="mb-5">Front-end developer based in New Zealand</h2>
-        <a href="#" class="btn btn-branding main-button">Contact me</a>
+        <a href="#" class="btn btn-branding main-button contact-button">Contact me</a>
+        <a href="/about.html" class="btn btn-branding main-button">About me</a>
     </div>
     <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
     <div class="projects">
@@ -85,8 +86,9 @@
                                 incorporate this project as a reminder for myself of my own progess as a developer. I am
                                 also quite fond of the design and colour choice in this project.
                             </p>
-                            <a href="https://festive-mestorf-a00114.netlify.app/" target="_blanc"
+                            <a href="/about.htmlhttps://festive-mestorf-a00114.netlify.app/" target="_blanc"
                                 class="btn btn-branding-outline">Learn More</a>
+                                <a href="" target="_blanc" class="btn btn-branding-outline">About Me</a>
                         </div>
                     </div>
                 </div>
