Added 'My Work' page.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>👋 Hello, I'm</p>
         <h1>Melanie Brandes</h1>
         <h2 class="mb-5">Front-end developer based in New Zealand</h2>
-        <a href="#" class="btn btn-branding main-button contact-button">Contact me</a>
+        <a href="/work.html" class="btn btn-branding main-button contact-button">My Work</a>
         <a href="/about.html" class="btn btn-branding main-button">About me</a>
     </div>
     <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
@@ -88,7 +88,6 @@
                             </p>
                             <a href="/about.htmlhttps://festive-mestorf-a00114.netlify.app/" target="_blanc"
                                 class="btn btn-branding-outline">Learn More</a>
-                                <a href="" target="_blanc" class="btn btn-branding-outline">About Me</a>
                         </div>
                     </div>
                 </div>
