--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 incorporate this project as a reminder for myself of my own progess as a developer. I am
                                 also quite fond of the design and colour choice in this project.
                             </p>
-                            <a href="/about.htmlhttps://festive-mestorf-a00114.netlify.app/" target="_blanc"
+                            <a href="https://festive-mestorf-a00114.netlify.app/" target="_blanc"
                                 class="btn btn-branding-outline">Learn More</a>
                         </div>
                     </div>
