--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             </p>
             <h3>LinkedIn</h3>
             <p>
-                <a href="#" target="_blank">@MelanieBrandes</a>
+                <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/" target="_blank">@MelanieBrandes</a>
             </p>
             
         </div>
