--- a/index.html
+++ b/index.html
@@ -110,6 +110,41 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between d-none d-md-flex mb-5">
+                <div>
+                    <h4>
+                        Work Inquiry
+                    </h4>
+                    <p class="text-muted">
+                        Let's work together
+                    </p>
+                </div>  
+                <div>
+                    <a href="" class=" mt- 5 btn btn-branding main-button">Contact me</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a href="mailto:mela.brandes@gmail.com"
+                class="email-link">
+                    mela.brandes@gmail.com
+                </a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/"
+                target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://github.com/MelaniaZ4"
+                target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.facebook.com/melanie.brandes.96/"
+                target="_blank">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+            </div>
+        </footer>
     </div>
 </body>
 
