--- a/index.html
+++ b/index.html
@@ -23,35 +23,34 @@
 </head>
 
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/index.html">Melanie Brandes</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="/about.html">About</a>
-                <a class="nav-item nav-link" href="/work.html">Work</a>
-                <a class="nav-item nav-link" href="/contact.html">Contact</a>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/index.html">Melanie Brandes</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="/about.html">About</a>
+                    <a class="nav-item nav-link" href="/work.html">Work</a>
+                    <a class="nav-item nav-link" href="/contact.html">Contact</a>
+                </div>
             </div>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="hero">
+            <p>👋 Hello, I'm</p>
+            <h1>Melanie Brandes</h1>
+            <h2 class="mb-5">Front-end developer based in New Zealand</h2>
+            <a href="/work.html" class="btn btn-branding main-button contact-button">My Work</a>
+            <a href="/about.html" class="btn btn-branding main-button">About me</a>
         </div>
-    </nav>
-</header>
-
-    <div class="hero">
-        <p>👋 Hello, I'm</p>
-        <h1>Melanie Brandes</h1>
-        <h2 class="mb-5">Front-end developer based in New Zealand</h2>
-        <a href="/work.html" class="btn btn-branding main-button contact-button">My Work</a>
-        <a href="/about.html" class="btn btn-branding main-button">About me</a>
-    </div>
-    <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
-    <div class="projects">
-        <div class="container">
-            <div class="row">
+        <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
+        <div class="projects">
+            <div class="row mb-5">
                 <div class="col d-none d-lg-block mb-5">
                     <img class="img-fluid" src="images/dictionary.png.PNG" alt="Dictionary">
                 </div>
@@ -69,7 +68,7 @@
                             App</a>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col">
                         <div class="project-description">
                             <h2 class="mb-5">Weather App</h2>
@@ -90,7 +89,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col d-none d-lg-block">
                         <img class="img-fluid" src="images/blueberry.png" alt="Vegan Blueberry Pancakes">
                     </div>
