Made the website SEO friendly and fixed some links and styling.

--- a/work.html
+++ b/work.html
@@ -25,17 +25,17 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/index.html">Melanie Brandes</a>
+            <a class="navbar-brand" href="/index.html" title="Homepage">Melanie Brandes</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="/about.html">About</a>
-                    <a class="nav-item nav-link" href="/work.html">Work</a>
-                    <a class="nav-item nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-item nav-link active" href="/index.html" title="Homepage">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="/about.html" title="About Melanie">About</a>
+                    <a class="nav-item nav-link" href="/work.html" title="Melanie's work">Work</a>
+                    <a class="nav-item nav-link" href="/contact.html" title="Contact Melanie">Contact</a>
                 </div>
             </div>
         </nav>
@@ -67,6 +67,58 @@
         </div>
         </div>
             </div>
+        </div>
+        <div class="container">
+            <footer>
+                <div class="contact-box d-flex justify-content-between d-none d-md-flex mb-5">
+                    <div>
+                        <h4>
+                            Work Inquiry
+                        </h4>
+                        <p class="text-muted">
+                            Let's work together
+                        </p>
+                    </div>
+                    <div>
+                        <a href="mailto:mela.brandes@gmail.com" title="Email Melanie" class="btn btn-branding main-button">Contact me</a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <a href="mailto:mela.brandes@gmail.com" class="email-link">
+                        mela.brandes@gmail.com
+                    </a>
+                </div>
+                <div class="social-links d-flex justify-content-center">
+                    <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://github.com/MelaniaZ4" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.facebook.com/melanie.brandes.96/" target="_blank">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <a href="mailto:mela.brandes@gmail.com" class="email-link" title="Email Melanie">
+                        mela.brandes@gmail.com
+                    </a>
+                </div>
+                <div class="social-links d-flex justify-content-center">
+                    <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/" target="_blank" title="Melanie on LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://github.com/MelaniaZ4" target="_blank" title="Melanie's Github Repositories">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.facebook.com/melanie.brandes.96/" target="_blank" title="Melanie on Facebook">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                </div>
+                <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This project was coded by Melanie Brandes, and is
+                    <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-sourced</a>.
+                </p>
+            </footer>
         </div>
 </body>
 
