--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Melanie Brandes is a front-end developer based in New Zealand. She builds responsive websites that work. ">
+        content="Melanie Brandes is a front-end developer based in New Zealand. She builds responsive websites that work using modern developer tools like React and Boostrap. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,35 +19,35 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <title>Melanie Brandes - Front-end Developer</title>
+    <title>Front-end Developer - Melanie Brandes</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/index.html">Melanie Brandes</a>
+            <a class="navbar-brand" href="/index.html" title="Homepage">Melanie Brandes</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="/about.html">About</a>
-                    <a class="nav-item nav-link" href="/work.html">Work</a>
-                    <a class="nav-item nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-item nav-link active" href="/index.html" title="Homepage">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="/about.html" title="About Melanie">About</a>
+                    <a class="nav-item nav-link" href="/work.html" title="Melanie's work">Work</a>
+                    <a class="nav-item nav-link" href="/contact.html" title="Contact Melanie" >Contact</a>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    
         <div class="hero">
             <p>👋 Hello, I'm</p>
             <h1>Melanie Brandes</h1>
             <h2 class="mb-5">Front-end developer based in New Zealand</h2>
-            <a href="/work.html" class="btn btn-branding main-button contact-button">My Work</a>
-            <a href="/about.html" class="btn btn-branding main-button">About me</a>
+            <a href="/work.html" class="btn btn-branding main-button contact-button" title="Contact Melanie Brandes">Contact me</a>
         </div>
+        <div class="container">
         <p class="text-center m-5">Check out my featured projects below 👩‍💻</p>
         <div class="projects">
             <div class="row mb-5">
@@ -63,8 +63,8 @@
                             functional. The free dictionary API and the Pexels Image API together create a great user
                             experience when looking up definitions of words.
                         </p>
-                        <a href="https://elastic-hoover-d0f470.netlify.app/" target="_blanc"
-                            class="btn btn-branding-outline">Launch
+                        <a href="https://elastic-hoover-d0f470.netlify.app/" title="Dictionary App" target="_blanc"
+                            class="btn btn-branding-outline mb-5">Launch
                             App</a>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                                 fronte-end framework Bootsrap to create a professional user interface and user
                                 experience.
                             </p>
-                            <a href="https://objective-colden-aae6f9.netlify.app/" target="_blanc"
+                            <a href="https://objective-colden-aae6f9.netlify.app/" title="Weather App" target="_blanc"
                                 class="btn btn-branding-outline">Launch
                                 App</a>
                         </div>
@@ -102,7 +102,7 @@
                                 incorporate this project as a reminder for myself of my own progess as a developer. I am
                                 also quite fond of the design and colour choice in this project.
                             </p>
-                            <a href="https://festive-mestorf-a00114.netlify.app/" target="_blanc"
+                            <a href="https://festive-mestorf-a00114.netlify.app/" title="Blueberry Pancake Project" target="_blanc"
                                 class="btn btn-branding-outline">Learn More</a>
                         </div>
                     </div>
@@ -125,24 +125,30 @@
             </div>
             <div class="d-flex justify-content-center">
                 <a href="mailto:mela.brandes@gmail.com"
-                class="email-link">
+                class="email-link"
+                title="Email Melanie">
                     mela.brandes@gmail.com
                 </a>
             </div>
             <div class="social-links d-flex justify-content-center">
                 <a href="https://www.linkedin.com/in/melanie-brandes-5a6ba318a/"
-                target="_blank">
+                target="_blank"
+                title="Melanie on LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://github.com/MelaniaZ4"
-                target="_blank">
+                target="_blank"
+                title="Melanie's Github Repositories">
                     <i class="fab fa-github"></i>
                 </a>
                 <a href="https://www.facebook.com/melanie.brandes.96/"
-                target="_blank">
+                target="_blank"
+                title="Melanie on Facebook">
                     <i class="fab fa-facebook-square"></i>
                 </a>
             </div>
+            <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This project was coded by Melanie Brandes, and is 
+            <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-sourced</a>. </p>
         </footer>
     </div>
 </body>
