--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="hero">
             <p>👋 Hello, I'm</p>
             <h1>Melanie Brandes</h1>
-            <h2 class="mb-5">Front-end developer based in New Zealand</h2>
+            <h2 class="mb-5">Front-end developer based in Australia</h2>
             <a href="/work.html" class="btn btn-branding main-button contact-button" title="Contact Melanie Brandes">Contact me</a>
         </div>
         <div class="container">
@@ -76,7 +76,7 @@
                                 This Weather App uses the OpenWeatherMap API and allows the user to access
                                 weather data from anywhere in the world through a search bar. This data includes the
                                 current weather as well as a seven day forecast based on real-life data. I used the
-                                fronte-end framework Bootsrap to create a professional user interface and user
+                                front-end framework Bootstrap to create a professional user interface and user
                                 experience.
                             </p>
                             <a href="https://objective-colden-aae6f9.netlify.app/" title="Weather App" target="_blanc"
