--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
             <div class="col-md-6">
                 <div class="content">
                     <h1 class="mb-4">Hi I am Melanie Brandes</h1>
-                    <h2 class="mb-4">Front-end Developer based in New Zealand.</h2>
-                    <p class="text-muted">I am a German developer based in New Zealand. On my journey towards
+                    <h2 class="mb-4">Front-end Developer based in Australia.</h2>
+                    <p class="text-muted">I am a German developer based in Victoria, Australia. On my journey towards
                         becoming a
                         front-end Developer, I
                         have
@@ -55,12 +55,10 @@
                         SheCodes
                         React
                         and
-                        SheCodes Responsive. Now I am studying towards a Diploma in Web Development and Design at Open
+                        SheCodes Responsive. Since mid 2021, I have been studying towards a Diploma in Web Development and Design at Open
                         Polytechnic,
-                        aiming to further increase my reportoir and understanding of coding and additional coding
-                        languages,
-                        especially
-                        backend development.</p>
+                        aiming to further increase my reportoir and understanding of Information Technology and additional coding
+                        languages, including backend technologies.</p>
                     <a href="/work.html" class="btn btn-branding main-button mt-5">My Projects</a>
                 </div>
             </div>
