--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Melanie Brandes is a front-end developer based in New Zealand. She builds responsive websites that work. ">
+        content="Melanie Brandes is a Web Developer based in Australia. She builds responsive websites that work. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -45,11 +45,11 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="content">
-                    <h1 class="mb-4">Hi I am Melanie Brandes</h1>
-                    <h2 class="mb-4">Front-end Developer based in Australia.</h2>
+                    <h1 class="mb-4">Hi I am <br>Melanie Brandes</h1>
+                    <h2 class="mb-4">Developer based in Australia.</h2>
                     <p class="text-muted">I am a German developer based in Victoria, Australia. On my journey towards
                         becoming a
-                        front-end Developer, I
+                        full-stack Web Developer, I
                         have
                         completed 6 months worth of coding workshops with SheCodes: SheCodes Basics, SheCodes Plus,
                         SheCodes
