--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Melanie Brandes is a front-end developer based in New Zealand. She builds responsive websites that work using modern developer tools like React and Boostrap. ">
+        content="Melanie Brandes is a Web Developer based in Australia. She builds responsive websites that work using modern developer tools like React and Boostrap. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <title>Front-end Developer - Melanie Brandes</title>
+    <title>Developer - Melanie Brandes</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
         <div class="hero">
             <p>👋 Hello, I'm</p>
             <h1>Melanie Brandes</h1>
-            <h2 class="mb-5">Front-end developer based in Australia</h2>
+            <h2 class="mb-5">Developer based in Australia</h2>
             <a href="/work.html" class="btn btn-branding main-button contact-button" title="Contact Melanie Brandes">Contact me</a>
         </div>
         <div class="container">
