--- a/about.html
+++ b/about.html
@@ -46,19 +46,17 @@
             <div class="col-md-6">
                 <div class="content">
                     <h1 class="mb-4">Hi I am <br>Melanie Brandes</h1>
-                    <h2 class="mb-4">Developer based in Australia.</h2>
-                    <p class="text-muted">I am a German developer based in Victoria, Australia. On my journey towards
+                    <h2 class="mb-4">Software Developer based in Australia.</h2>
+                    <p class="text-muted">I am a German software developer based in Victoria, Australia. On my journey towards
                         becoming a
                         full-stack Web Developer, I
                         have
-                        completed 6 months worth of coding workshops with SheCodes: SheCodes Basics, SheCodes Plus,
-                        SheCodes
-                        React
-                        and
-                        SheCodes Responsive. Since mid 2021, I have been studying towards a Diploma in Web Development and Design at Open
-                        Polytechnic,
-                        aiming to further increase my reportoir and understanding of Information Technology and additional coding
-                        languages, including backend technologies.</p>
+                        started learning coding though SheCodes Pro Workshops in 2020-2021, acquiring basic Web Development skills like responsive Web Development and the React framework.
+                        Having been excited by this new learning, I started a Diploma in Web Development and Design at Open
+                        Polytechnic July 2021 with the goal to change careers from teaching to Web Development. I finished this course successfully in June 2022. 
+                        <br><br>With my new skills in a range of web technologies, I started to work for Feuerwehr e-learning as a contractor in the role of a Junior Frontend Developer in Mai 2022. 
+                        Since November 2022, I am also working for GenU as a Junior Software Developer, where I am now learning more about backend technologies as well, coming closer to my goal of becoming a full-stack developer.</p>
+                        <br><p><i> It excites me that in life there is always another goal to chase.</i></p>
                     <a href="/work.html" class="btn btn-branding main-button mt-5">My Projects</a>
                 </div>
             </div>
@@ -99,7 +97,7 @@
                         <i class="fab fa-facebook-square"></i>
                     </a>
                 </div>
-                <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This project was coded by Melanie Brandes, and is
+                <p class="text-center mt-5 mb-5 text-muted">👩‍💻 This portfolio was coded by Melanie Brandes, and is
                     <a href="https://github.com/MelaniaZ4/Portfolio-Project.git">open-sourced</a>.
                 </p>
             </footer>
